Bug 165870 - Crash when opening PPTX file containing video link to Youtube (qt6 on Linux)
Summary: Crash when opening PPTX file containing video link to Youtube (qt6 on Linux)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords:
Depends on:
Blocks: Qt6
  Show dependency treegraph
 
Reported: 2025-03-22 23:14 UTC by Michael Weghorn
Modified: 2025-03-25 09:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file to reproduce the crash (147.78 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-03-22 23:15 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2025-03-22 23:14:52 UTC
When opening a PPTX file that was created in PowerPoint and contains a link to an external video on Youtube, this triggers a crash when moving to the corresponding slide in Presentation Mode on Linux with the qt6 VCL plugin.

Steps to reproduce:

1) start LO with the qt6 VCL plugin on Linux
2) open the attached sample file
3) press F5 to start Presentation mode
4) click right arrow key to move to slide 2 that contains the video

-> Crash

When using the gen or gtk3 VCL plugin, the crash doesn't occur.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b417954503efe6f61c42f9d5991148b80ffa3e44
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Michael Weghorn 2025-03-22 23:15:18 UTC
Created attachment 199965 [details]
Sample file to reproduce the crash
Comment 2 Michael Weghorn 2025-03-22 23:17:38 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/183228
Comment 3 Commit Notification 2025-03-23 05:45:55 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b1576ba17a4111f02fc6f8e27c09c78dbd7fd963

tdf#165870 qt avmedia: Handle null media player

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-03-25 09:58:09 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/4cebd9308658f094d4738710e9f8427f0f6f8aea

tdf#165870 qt avmedia: Handle null media player

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.